--- a/1/manifest.json
+++ b/1/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Krishna2nd",
-  "name": "Krishna2nd Profile",
+  "name": "Krishna2nd",
   "icons": [
     {
       "src": "img/favicon.ico",
