--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Krishna2nd",
-  "name": "Krishna2nd Profile",
+  "name": "Krishna2nd Profile.",
   "icons": [
     {
       "src": "1/img/favicon.ico",
