--- a/manifest.json
+++ b/manifest.json
@@ -29,13 +29,8 @@
     }
   ],
   "start_url": "index.html?launcher=true",
-  "gcm_sender_id": "656085505957",
-  "gcm_user_visible_only": true,
-  "permissions": [
-      "gcm"
-  ],
   "orientation": "portrait",
   "display": "standalone",
-  "theme_color": "#2874f0",
-  "background_color": "#2874f0"
+  "theme_color": "#07cb79",
+  "background_color": "#07cb79"
 }
