--- a/manifest.json
+++ b/manifest.json
@@ -3,29 +3,40 @@
   "name": "Krishna2nd Profile.",
   "icons": [
     {
-      "src": "1/img/favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "32x32"
+      "src": "/icons/android-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png",
+      "density": "0.75"
     },
     {
-      "src": "1/img/favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "64x64"
+      "src": "/icons/android-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
     },
     {
-      "src": "1/img/favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "128x128"
+      "src": "/icons/android-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "density": "1.5"
     },
     {
-      "src": "1/img/favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "256x256"
+      "src": "/icons/android-icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "density": "2.0"
     },
     {
-      "src": "1/img/favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "512x512"
+      "src": "/icons/android-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": "3.0"
+    },
+    {
+      "src": "/icons/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": "4.0"
     }
   ],
   "start_url": "index.html?launcher=true",
