--- a/profile/tsconfig.json
+++ b/profile/tsconfig.json
@@ -23,6 +23,7 @@
     "paths": {
       "@views/*": ["views/*"],
       "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"]
     }
   },
   "include": [
