Update with sass modules

--- a/profile/package.json
+++ b/profile/package.json
@@ -11,11 +11,15 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.65.1",
+    "sass-loader": "^13.3.2",
+    "typed-scss-modules": "^7.1.4",
     "typescript": "^5.1.6",
     "web-vitals": "^3.4.0"
   },
